--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "dptb-negf"
+name = "dpnegf"
 version = "0.1.0"
 license = "LGPL-3.0"
-description = "A nonequilibrium Green’s function (NEGF) module based on dptb."
+description = "A nonequilibrium Green's function (NEGF) package based on dptb for quantum transport simulations of nanoelectronic devices."
 authors = ["J. Zou <jijiezou@stu.pku.edu.cn>","Q. Gu <guqq@pku.edu.cn>", "Z. Zhanghao <zhouyinzhanghao@gmail.com>"]
 readme = "README.md"
-repository = "https://github.com/DeePTB-Lab/DeePTB-negf"
+repository = "https://github.com/DeePTB-Lab/dpnegf"
 
 [tool.poetry.dependencies]
 python = ">=3.9, <=3.12.9"
