feat(.gitignore): 添加对 test_negf 目录下 .xyz 文件的忽略

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 test*.ipynb
 **/processed*/*
+dpnegf/tests/data/test_negf/**/*.xyz
 dpnegf/tests/**/*.yaml
 dpnegf/tests/**/pre_*.pt
 dpnegf/tests/**/*.pth
